初步实现流式输出